Update exercise 3 datasets

--- a/exercises/exercise_3/useful_code_snippets_olympic_data.ipynb
+++ b/exercises/exercise_3/useful_code_snippets_olympic_data.ipynb
@@ -17144,6 +17144,394 @@
    "source": [
     "athlete_statistics[athlete_statistics[\"Year\"] == selected_year][['Sport', 'Event']].drop_duplicates().value_counts('Sport').reset_index()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Medals by Event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>NOC</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 1,500 metres</td>\n",
+       "      <td>AUS</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 1,500 metres</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 1,500 metres</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 100 metres</td>\n",
+       "      <td>GER</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Germany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 100 metres</td>\n",
+       "      <td>HUN</td>\n",
+       "      <td>Hungary</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14267</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Lightweight, Freestyle</td>\n",
+       "      <td>TUN</td>\n",
+       "      <td>Tunisia</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14268</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
+       "      <td>BLR</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Belarus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14269</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
+       "      <td>JPN</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14270</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
+       "      <td>KAZ</td>\n",
+       "      <td>Kazakhstan</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14271</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14272 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Year      Sport                                      Event  NOC  \\\n",
+       "0      1896  Athletics               Athletics Men's 1,500 metres  AUS   \n",
+       "1      1896  Athletics               Athletics Men's 1,500 metres  FRA   \n",
+       "2      1896  Athletics               Athletics Men's 1,500 metres  USA   \n",
+       "3      1896  Athletics                 Athletics Men's 100 metres  GER   \n",
+       "4      1896  Athletics                 Athletics Men's 100 metres  HUN   \n",
+       "...     ...        ...                                        ...  ...   \n",
+       "14267  2016  Wrestling   Wrestling Women's Lightweight, Freestyle  TUN   \n",
+       "14268  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  BLR   \n",
+       "14269  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  JPN   \n",
+       "14270  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  KAZ   \n",
+       "14271  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  POL   \n",
+       "\n",
+       "             Bronze          Gold        Silver  \n",
+       "0      Data Missing     Australia  Data Missing  \n",
+       "1            France  Data Missing  Data Missing  \n",
+       "2      Data Missing  Data Missing           USA  \n",
+       "3      Data Missing  Data Missing       Germany  \n",
+       "4           Hungary  Data Missing  Data Missing  \n",
+       "...             ...           ...           ...  \n",
+       "14267       Tunisia  Data Missing  Data Missing  \n",
+       "14268  Data Missing  Data Missing       Belarus  \n",
+       "14269  Data Missing         Japan  Data Missing  \n",
+       "14270    Kazakhstan  Data Missing  Data Missing  \n",
+       "14271        Poland  Data Missing  Data Missing  \n",
+       "\n",
+       "[14272 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medals_by_event = pd.read_csv(\"country_medals_by_event.csv\")\n",
+    "medals_by_event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>NOC</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 1,500 metres</td>\n",
+       "      <td>AUS</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 1,500 metres</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 1,500 metres</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 100 metres</td>\n",
+       "      <td>GER</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Germany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1896</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's 100 metres</td>\n",
+       "      <td>HUN</td>\n",
+       "      <td>Hungary</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14267</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Lightweight, Freestyle</td>\n",
+       "      <td>TUN</td>\n",
+       "      <td>Tunisia</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14268</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
+       "      <td>BLR</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Belarus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14269</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
+       "      <td>JPN</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14270</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
+       "      <td>KAZ</td>\n",
+       "      <td>Kazakhstan</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14271</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>Data Missing</td>\n",
+       "      <td>Data Missing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14272 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Year      Sport                                      Event  NOC  \\\n",
+       "0      1896  Athletics               Athletics Men's 1,500 metres  AUS   \n",
+       "1      1896  Athletics               Athletics Men's 1,500 metres  FRA   \n",
+       "2      1896  Athletics               Athletics Men's 1,500 metres  USA   \n",
+       "3      1896  Athletics                 Athletics Men's 100 metres  GER   \n",
+       "4      1896  Athletics                 Athletics Men's 100 metres  HUN   \n",
+       "...     ...        ...                                        ...  ...   \n",
+       "14267  2016  Wrestling   Wrestling Women's Lightweight, Freestyle  TUN   \n",
+       "14268  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  BLR   \n",
+       "14269  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  JPN   \n",
+       "14270  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  KAZ   \n",
+       "14271  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  POL   \n",
+       "\n",
+       "             Bronze          Gold        Silver  \n",
+       "0      Data Missing     Australia  Data Missing  \n",
+       "1            France  Data Missing  Data Missing  \n",
+       "2      Data Missing  Data Missing           USA  \n",
+       "3      Data Missing  Data Missing       Germany  \n",
+       "4           Hungary  Data Missing  Data Missing  \n",
+       "...             ...           ...           ...  \n",
+       "14267       Tunisia  Data Missing  Data Missing  \n",
+       "14268  Data Missing  Data Missing       Belarus  \n",
+       "14269  Data Missing         Japan  Data Missing  \n",
+       "14270    Kazakhstan  Data Missing  Data Missing  \n",
+       "14271        Poland  Data Missing  Data Missing  \n",
+       "\n",
+       "[14272 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medals_by_event"
+   ]
   }
  ],
  "metadata": {
