--- a/_source/datasets/exercise_3/raw/data_wrangling.ipynb
+++ b/_source/datasets/exercise_3/raw/data_wrangling.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "[222552 rows x 15 columns]"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "[222203 rows x 16 columns]"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        "[205 rows x 2 columns]"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "1093         Elvis Va      1"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
        "[34079 rows x 11 columns]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1248,10 +1248,9 @@
        "      <th>Year</th>\n",
        "      <th>Sport</th>\n",
        "      <th>Event</th>\n",
-       "      <th>NOC</th>\n",
        "      <th>Bronze</th>\n",
-       "      <th>Gold</th>\n",
        "      <th>Silver</th>\n",
+       "      <th>Gold</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1260,50 +1259,45 @@
        "      <td>1896</td>\n",
        "      <td>Athletics</td>\n",
        "      <td>Athletics Men's 1,500 metres</td>\n",
-       "      <td>AUS</td>\n",
-       "      <td>Data Missing</td>\n",
+       "      <td>France</td>\n",
+       "      <td>USA</td>\n",
        "      <td>Australia</td>\n",
-       "      <td>Data Missing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1896</td>\n",
        "      <td>Athletics</td>\n",
-       "      <td>Athletics Men's 1,500 metres</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Data Missing</td>\n",
-       "      <td>Data Missing</td>\n",
+       "      <td>Athletics Men's 100 metres</td>\n",
+       "      <td>Hungary</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1896</td>\n",
        "      <td>Athletics</td>\n",
-       "      <td>Athletics Men's 1,500 metres</td>\n",
-       "      <td>USA</td>\n",
+       "      <td>Athletics Men's 110 metres Hurdles</td>\n",
        "      <td>Data Missing</td>\n",
-       "      <td>Data Missing</td>\n",
+       "      <td>UK</td>\n",
        "      <td>USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1896</td>\n",
        "      <td>Athletics</td>\n",
-       "      <td>Athletics Men's 100 metres</td>\n",
-       "      <td>GER</td>\n",
-       "      <td>Data Missing</td>\n",
-       "      <td>Data Missing</td>\n",
-       "      <td>Germany</td>\n",
+       "      <td>Athletics Men's 400 metres</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>USA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1896</td>\n",
        "      <td>Athletics</td>\n",
-       "      <td>Athletics Men's 100 metres</td>\n",
-       "      <td>HUN</td>\n",
+       "      <td>Athletics Men's 800 metres</td>\n",
+       "      <td>Greece</td>\n",
        "      <td>Hungary</td>\n",
-       "      <td>Data Missing</td>\n",
-       "      <td>Data Missing</td>\n",
+       "      <td>Australia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1313,107 +1307,103 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14267</th>\n",
+       "      <th>5211</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Flyweight, Freestyle</td>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>Azerbaijan</td>\n",
+       "      <td>Japan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5212</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Heavyweight, Freestyle</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Kazakhstan</td>\n",
+       "      <td>Canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5213</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>Wrestling Women's Light-Heavyweight, Freestyle</td>\n",
+       "      <td>Kazakhstan</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>Japan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5214</th>\n",
        "      <td>2016</td>\n",
        "      <td>Wrestling</td>\n",
        "      <td>Wrestling Women's Lightweight, Freestyle</td>\n",
-       "      <td>TUN</td>\n",
-       "      <td>Tunisia</td>\n",
-       "      <td>Data Missing</td>\n",
-       "      <td>Data Missing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14268</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>Wrestling</td>\n",
-       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
-       "      <td>BLR</td>\n",
-       "      <td>Data Missing</td>\n",
-       "      <td>Data Missing</td>\n",
-       "      <td>Belarus</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14269</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>Wrestling</td>\n",
-       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
-       "      <td>JPN</td>\n",
-       "      <td>Data Missing</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Russia</td>\n",
        "      <td>Japan</td>\n",
-       "      <td>Data Missing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14270</th>\n",
+       "      <th>5215</th>\n",
        "      <td>2016</td>\n",
        "      <td>Wrestling</td>\n",
        "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
-       "      <td>KAZ</td>\n",
        "      <td>Kazakhstan</td>\n",
-       "      <td>Data Missing</td>\n",
-       "      <td>Data Missing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14271</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>Wrestling</td>\n",
-       "      <td>Wrestling Women's Middleweight, Freestyle</td>\n",
-       "      <td>POL</td>\n",
-       "      <td>Poland</td>\n",
-       "      <td>Data Missing</td>\n",
-       "      <td>Data Missing</td>\n",
+       "      <td>Belarus</td>\n",
+       "      <td>Japan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>14272 rows × 7 columns</p>\n",
+       "<p>5216 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Medal  Year      Sport                                      Event  NOC  \\\n",
-       "0      1896  Athletics               Athletics Men's 1,500 metres  AUS   \n",
-       "1      1896  Athletics               Athletics Men's 1,500 metres  FRA   \n",
-       "2      1896  Athletics               Athletics Men's 1,500 metres  USA   \n",
-       "3      1896  Athletics                 Athletics Men's 100 metres  GER   \n",
-       "4      1896  Athletics                 Athletics Men's 100 metres  HUN   \n",
-       "...     ...        ...                                        ...  ...   \n",
-       "14267  2016  Wrestling   Wrestling Women's Lightweight, Freestyle  TUN   \n",
-       "14268  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  BLR   \n",
-       "14269  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  JPN   \n",
-       "14270  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  KAZ   \n",
-       "14271  2016  Wrestling  Wrestling Women's Middleweight, Freestyle  POL   \n",
+       "Medal  Year      Sport                                           Event  \\\n",
+       "0      1896  Athletics                    Athletics Men's 1,500 metres   \n",
+       "1      1896  Athletics                      Athletics Men's 100 metres   \n",
+       "2      1896  Athletics              Athletics Men's 110 metres Hurdles   \n",
+       "3      1896  Athletics                      Athletics Men's 400 metres   \n",
+       "4      1896  Athletics                      Athletics Men's 800 metres   \n",
+       "...     ...        ...                                             ...   \n",
+       "5211   2016  Wrestling          Wrestling Women's Flyweight, Freestyle   \n",
+       "5212   2016  Wrestling        Wrestling Women's Heavyweight, Freestyle   \n",
+       "5213   2016  Wrestling  Wrestling Women's Light-Heavyweight, Freestyle   \n",
+       "5214   2016  Wrestling        Wrestling Women's Lightweight, Freestyle   \n",
+       "5215   2016  Wrestling       Wrestling Women's Middleweight, Freestyle   \n",
        "\n",
-       "Medal        Bronze          Gold        Silver  \n",
-       "0      Data Missing     Australia  Data Missing  \n",
-       "1            France  Data Missing  Data Missing  \n",
-       "2      Data Missing  Data Missing           USA  \n",
-       "3      Data Missing  Data Missing       Germany  \n",
-       "4           Hungary  Data Missing  Data Missing  \n",
-       "...             ...           ...           ...  \n",
-       "14267       Tunisia  Data Missing  Data Missing  \n",
-       "14268  Data Missing  Data Missing       Belarus  \n",
-       "14269  Data Missing         Japan  Data Missing  \n",
-       "14270    Kazakhstan  Data Missing  Data Missing  \n",
-       "14271        Poland  Data Missing  Data Missing  \n",
+       "Medal        Bronze      Silver       Gold  \n",
+       "0            France         USA  Australia  \n",
+       "1           Hungary     Germany        USA  \n",
+       "2      Data Missing          UK        USA  \n",
+       "3                UK         USA        USA  \n",
+       "4            Greece     Hungary  Australia  \n",
+       "...             ...         ...        ...  \n",
+       "5211       Bulgaria  Azerbaijan      Japan  \n",
+       "5212          China  Kazakhstan     Canada  \n",
+       "5213     Kazakhstan      Russia      Japan  \n",
+       "5214          India      Russia      Japan  \n",
+       "5215     Kazakhstan     Belarus      Japan  \n",
        "\n",
-       "[14272 rows x 7 columns]"
+       "[5216 rows x 6 columns]"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "country_medals_by_event = medallers[[\"Year\", \"Sport\", \"Event\", \"Medal\", \"Country\", \"NOC\"]].drop_duplicates().reset_index(drop=True).pivot_table(\n",
-    "    index=['Year', 'Sport', 'Event', 'NOC'],\n",
+    "country_medals_by_event = medallers[[\"Year\", \"Sport\", \"Event\", \"Medal\", \"Country\"]].drop_duplicates().reset_index(drop=True).pivot_table(\n",
+    "    index=['Year', 'Sport', 'Event'],\n",
     "    columns='Medal',\n",
     "    values='Country',\n",
     "    aggfunc='first'  # Take the first team in case of ties\n",
-    ").reset_index().fillna(\"Data Missing\")\n",
+    ").reset_index().fillna(\"Data Missing\")[['Year', 'Sport', 'Event', 'Bronze', 'Silver', 'Gold']]\n",
     "\n",
     "country_medals_by_event.to_csv(\"../../../../exercises/exercise_3/country_medals_by_event.csv\", index=None)\n",
+    "\n",
+    "\n",
     "\n",
     "country_medals_by_event"
    ]
